--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production npm-run-all clean -p build:*",
     "build:eleventy": "eleventy",
-    "build:webpack": "webpack",
+    "build:webpack": "webpack --mode=development",
     "clean": "rm -rf dist",
     "start": "npm-run-all clean -p build:* -p start:*",
     "start:eleventy": "eleventy --serve --quiet",
     "start:webpack": "webpack --watch",
     "deploy": "npm-run-all build:* gh-pages",
     "gh-pages": "gh-pages -d dist"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hugomoraga/fuentedesoda.git"
@@ -29,6 +29,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
+    "copy-webpack-plugin": "^10.2.4",
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
     "gh-pages": "^3.2.3",
@@ -37,8 +38,14 @@
     "postcss": "^8.4.6",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.5.0",
     "tailwindcss": "^3.0.22",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "tiny-slider": "^2.9.4"
   }
 }
