--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
+    "@11ty/eleventy-plugin-vue": "^0.7.2",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "copy-webpack-plugin": "^10.2.4",
@@ -46,6 +47,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
-    "tiny-slider": "^2.9.4"
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "tiny-slider": "^2.9.4",
+    "vue-router": "^4.0.12"
   }
 }
